apps/ufc-dashboard/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ufc-dashboard
  labels:
    app.kubernetes.io/name: ufc-dashboard
